# data-science-container-template

./: .dockerignore  .env.example  .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  create_ds_project.sh  custom_startup.sh  docker-compose.yml  example_env  pyproject.deps.toml  pyproject.toml  requirements.txt  setup.py  start_dev_container.sh  start_prod_container.sh
.github/: copilot-instructions.md
data_science_project/config/: logging_config.py
data_science_project/gen_ai_models/: model_handler.py
data_science_project/webapp/: streamlit_demo.py
notebooks/: Untitled.ipynb
scripts/: suggest_commit_message.py
src/data_science_project/config/: logging_config.py  paths.py
src/data_science_project/utils/: database.py  logging.py
