[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_science_project"
version = "0.1.0"
description = "Data science project template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.8.0",
    "beautifulsoup4>=4.12.0",
    "chromadb>=1.0.20",
    "duckdb>=0.9.0",
    "groq>=0.20.0",
    "ipython>=8.14.0",
    "ipywidgets>=8.0.0",
    "jupyter>=1.0.0",
    "jupyter-dash>=0.4.2",
    "jupyterlab>=4.0.0",
    "kagglehub>=0.3.12",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-openai>=0.3.32",
    "lxml>=4.9.0",
    "matplotlib>=3.7.0",
    "newspaper3k>=0.2.8",
    "numpy>=1.24.0",
    "openai>=1.61.1",
    "pandas>=2.0.0",
    "plotly>=5.13.0",
    "pyarrow>=14.0.1",
    "pytest>=7.3.1",
    "pyyaml==6.0.1",
    "requests>=2.31.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
    "sentence-transformers>=5.1.0",
    "statsmodels>=0.13.5",
    "streamlit>=1.31.0",
    "tiktoken>=0.11.0",
    "tqdm>=4.65.0",
    "trafilatura>=1.6.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["data_science_project*"]
